--- a/index.html
+++ b/index.html
@@ -42,26 +42,15 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Rashmitha</span><br> Web Designer</h1>
 
-                    <a href="#" class="button">Resume</a>
+                    <a href="c:\Users\rashe\Rashmitha Hegde resume.pdf" class="button">Resume</a>
                 </div>
 
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/rashmitha-hegde-187880211/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <!-- <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a> -->
                     <a href="https://github.com/Rashmitha-Hegde" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
                 <div class="home__img">
-                    <!-- <svg class="home__blob" viewBox="0 0 479 467" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <mask id="mask0" mask-type="alpha">
-                            <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
-                        </mask>
-                        <g mask="url(#mask0)">
-                            <rect width="100%" height="100%" fill="#00008B"/>
-                            <path d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"/>
-                            <image class="home__blob-img" x="10" y="0"href="assets/ProfilePhoto.jpeg"/>
-                        </g>
-                    </svg> -->
                     <svg class="home__blob" viewBox="0 0 479 467" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <!-- Image as a rectangle -->
                         <image href="assets/ProfilePhoto.jpeg" x="0" y="0" width="479" height="467"/>
@@ -93,7 +82,7 @@
                 <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p>
+                        <p class="skills__text">I am dedicated to delivering high-quality web solutions that prioritize user experience. With a strong foundation in front-end and back-end technologies.</p>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-html5 skills__icon'></i>
@@ -143,38 +132,27 @@
                             </div>
                         </div>
                     </div>
-                    
-                    <div>              
-                        <img src="assets/img/work3.jpg" alt="" class="skills__img">
-                    </div>
                 </div>
             </section>
 
             <!--===== Education =====-->
             <section class="education section" id="education">
                 <h2 class="section-title">Education</h2>
-                <div class="container">
-                    <div class="row">
+                <div class="educationcontainer bd-grid">
                     <div class="card" style="max-width: 18rem;">
                         <div class="card-header">Bachelor's Degree</div>
                         <div class="card-body">
                             <h5 class="card-title">2019-2023</h5>
                             <p class="card-text">B.E in Computer Science And Engineering-MITE</p>
-
                         </div>
                     </div>
-                </div>   
-                <div class="container">
                     <div class="card" style="max-width: 18rem;">
                         <div class="card-header">Pre-University Course</div>
                         <div class="card-body">
                             <h5 class="card-title">2017-2019</h5>
                             <p class="card-text">Sri Bhuvanendra PU College</p>
-
                         </div>
                     </div>
-                </div> 
-                <div class="container">
                     <div class="card" style="max-width: 18rem;">
                         <div class="card-header">Secondary School</div>
                         <div class="card-body">
@@ -185,50 +163,42 @@
                     </div>
                 </div>
             </div>     
-            </div>   
                           
             </section>
             <!--===== PROJECTS =====-->
             <section class="project section" id="project">
                 <h2 class="section-title">Projects</h2>
-                <div class="cardcontainer">
+                <div class="projectcontainer bd-grid">
                 <div class="row">
                 <div class="card">
                     <img src="assets/EMSimage.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">.Net Project</h5>
                       <p class="card-text">An Employee Management System automates HR tasks like employee data, attendance, and payroll.</p>
-                      <a href="https://github.com/hudaif-2002/EMSFRONTEND.git" class="btn btn-primary">View Project</a>
+                      <a href="https://github.com/hudaif-2002/EMSFRONTEND.git" class="button">View Project</a>
                     </div>
                   </div>
-                </div>
-                <div class="row">
+                  </div>
                     <div class="card">
                         <img src="assets/crimehotspot.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">AI/ML Project</h5>
                           <p class="card-text">A system that identifies crime hotspots and suggests safe paths using statistical and geo-spatial methods.</p>
-                          <a href="https://github.com/shadmanshaikh/CRIME-HOTSPOT-DETECTION-AND-SAFE-PATH-SCHEMER-USING-STATISTICAL-AND-GEO-SPATIAL-METHODS" class="btn btn-primary">View Project</a>
+                          <a href="https://github.com/shadmanshaikh/CRIME-HOTSPOT-DETECTION-AND-SAFE-PATH-SCHEMER-USING-STATISTICAL-AND-GEO-SPATIAL-METHODS" class="button">View Project</a>
                         </div>
                       </div>
-                    </div>
-                </div>     
+                    </div>   
             </section>
             <!--===== CONTACT =====-->
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
-
                 <div class="contact__container bd-grid">
-                    <form action="" class="contact__form">
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="button" value="Contact" class="contact__button button">
-                    </form>
+                        <p><i class='bx bxs-contact'></i>  Contact: <a href="tel:917483056802">917483056802</a></p>
+                        <p><i class='bx bx-mail-send'></i> Email: <a href="mailto:rashmithahegde30@gmail.com">rashmithahegde30@gmail.com</a></p>    
+                        <p><i class='bx bx-location-plus' ></i>  Location : Mangalore,Karnataka</p>        
                 </div>
             </section>
         </main>
-
         <!--===== FOOTER =====-->
         <footer class="footer">
             <p class="footer__title">Rashmitha</p>
