--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Rashmitha</span><br> Web Designer</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Rashmitha</span><br> Trainee @ EG</h1>
 
                     <a href="c:\Users\rashe\Rashmitha Hegde resume.pdf" class="button">Resume</a>
                 </div>
@@ -69,8 +69,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Rashmitha</h2>
-                        <p class="about__text">Computer Science Engineering graduate with strong technical skills in Java, Python, and problem-solving. 
-                            Passionate about leveraging technology for innovation and enhancing user experiences</p>           
+                        <p class="about__text">Currently a trainee developer in the Utility Business Unit at EG, where I am passionate about leveraging technology for innovation and enhancing user experiences. Eager to apply my problem-solving abilities and collaborate on impactful projects. </p>           
                     </div>                                   
                 </div>
             </section>
@@ -193,9 +192,9 @@
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
                 <div class="contact__container bd-grid">
-                        <p><i class='bx bxs-contact'></i>  Contact: <a href="tel:917483056802">917483056802</a></p>
-                        <p><i class='bx bx-mail-send'></i> Email: <a href="mailto:rashmithahegde30@gmail.com">rashmithahegde30@gmail.com</a></p>    
-                        <p><i class='bx bx-location-plus' ></i>  Location : Mangalore,Karnataka</p>        
+                        <h3><i class='bx bxs-contact'></i>  Contact: <a href="tel:917483056802">917483056802</a></h3>
+                        <h3><i class='bx bx-mail-send'></i> Email: <a href="mailto:rashmithahegde30@gmail.com">rashmithahegde30@gmail.com</a></h3>    
+                        <h3><i class='bx bx-location-plus' ></i>  Location : Mangalore,Karnataka</h3>        
                 </div>
             </section>
         </main>
