--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
                 <div class="contact__container bd-grid">
-                        <h3><i class='bx bxs-contact'></i>  Contact: <a href="tel:917484566788">917483056802</a></h3>
-                        <h3><i class='bx bx-mail-send'></i> Email: <a href="mailto:rashmitha@gmail.com">rashmithahegde30@gmail.com</a></h3>    
+                        <h3><i class='bx bxs-contact'></i>  Contact: <a href="tel:917484566788">917788990022</a></h3>
+                        <h3><i class='bx bx-mail-send'></i> Email: <a href="mailto:rashmitha@gmail.com">rashmita@gmail.com</a></h3>    
                         <h3><i class='bx bx-location-plus' ></i>  Location : Mangalore,Karnataka</h3>        
                 </div>
             </section>
